force-app/main/default/objects/Residential_Opportunity__c/Residential_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Residential Opportunity</label>
    <nameField>
        <label>Residential Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residential Opportunity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>