force-app/main/default/objects/Residential_Opportunity__c/fields/Address10__c.field-meta.xml
<CustomField>
    <fullName>Address10__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>