force-app/main/default/objects/Residential_Opportunity__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>This field hold the date on that Residential Opportunity cancelled.</description>
    <inlineHelpText>Residential Opportunity cancelled date.</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>