force-app/main/default/objects/Residential_Opportunity__c/fields/ContractSource__c.field-meta.xml
<CustomField>
    <fullName>ContractSource__c</fullName>
    <label>Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Source</valueSetName>
    </valueSet>
</CustomField>