force-app/main/default/objects/Residential_Opportunity__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECC</label>
    <type>Checkbox</type>
</CustomField>