force-app/main/default/objects/Residential_Opportunity__c/fields/Opener__c.field-meta.xml
<CustomField>
    <fullName>Opener__c</fullName>
    <label>Opener</label>
    <length>255</length>
    <type>Text</type>
</CustomField>