force-app/main/default/objects/Residential_Opportunity__c/fields/ResidenceType10__c.field-meta.xml
<CustomField>
    <fullName>ResidenceType10__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>