force-app/main/default/objects/Residential_Opportunity__c/fields/ResidentialCommissionConfigure__c.field-meta.xml
<CustomField>
    <fullName>ResidentialCommissionConfigure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Commission Configure</label>
    <referenceTo>ResidentialCommissionConfigure__c</referenceTo>
    <relationshipLabel>Residential Opportunity</relationshipLabel>
    <relationshipName>Residential_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>