force-app/main/default/objects/Residential_Opportunity__c/fields/ResidentialCommissionHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ResidentialCommissionHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Commission Hierarchy</label>
    <referenceTo>Residential_Commission_Hierarchy__c</referenceTo>
    <relationshipLabel>Residential Opportunity</relationshipLabel>
    <relationshipName>Residential_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>