force-app/main/default/objects/Residential_Opportunity__c/fields/SiteId10__c.field-meta.xml
<CustomField>
    <fullName>SiteId10__c</fullName>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>