force-app/main/default/objects/Residential_Opportunity__c/fields/SiteId1__c.field-meta.xml
<CustomField>
    <fullName>SiteId1__c</fullName>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>