force-app/main/default/objects/Residential_Opportunity__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Elec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>