force-app/main/default/objects/Residential_Opportunity__c/validationRules/Check_Cancelled_Date_Set_Or_Not.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Cancelled_Date_Set_Or_Not</fullName>
    <active>true</active>
    <description>This rule check when stage of Residential Opportunity set to cancelled then Cancelled Date must be set otherwise give error on Cancelled.</description>
    <errorConditionFormula>AND (
					 ISPICKVAL(StageName__c, &quot;Cancelled&quot;) ,
					 ISBLANK(Cancelled_Date__c )
						)</errorConditionFormula>
    <errorDisplayField>Cancelled_Date__c</errorDisplayField>
    <errorMessage>Please fill the Cancelled Date before Cancelled the Residential Opportunity.</errorMessage>
</ValidationRule>