force-app/main/default/objects/Residential_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>CloseDate__c</columns>
    <columns>Commodity__c</columns>
    <columns>Country__c</columns>
    <columns>Opener__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>